--- a/Personal_Site/Train_Website/templates/Train_Website/Train_common_station_without_stops.html
+++ b/Personal_Site/Train_Website/templates/Train_Website/Train_common_station_without_stops.html
@@ -11,7 +11,6 @@ body{
 	background-position: center;
     background-repeat:no-repeat;
     background-size:120%;
-    background-attachment: fixed;
 }
 
 h1{
@@ -88,6 +87,7 @@ p3{
                     <br><br>
                     <input type="submit" name="Submit">
                 </form>
+                <a href="{% url 'Train_Choose_Service' %}"><u>Back</u></a>
                 <h6>Below are the Train lines provided by the MTA</h6>
                 <img src="{% static 'images/Train_Options.jpg' %}" alt ='MTA Lines ' style="width:400px;height:300px;">
                 <a href="https://new.mta.info/maps" target="_blank">Click here to access MTA maps</a>
