--- a/Personal_Site/Train_Website/templates/Train_Website/landing.html
+++ b/Personal_Site/Train_Website/templates/Train_Website/landing.html
@@ -4,14 +4,13 @@
 
 <head>
 <style>
-#background{
+body{
 	background-color: #F8F8F8!!important;
 	text-align: center;
 	background-image: url("/static/images/MTA_Train_Pic.jpg");
-	background-position: center;
     background-repeat:no-repeat;
     background-size:100%;
-    background-attachment: auto;
+    background-attachment: fixed;
 }
 
 h1{
