--- a/Personal_Site/Train_Website/templates/Train_Website/Train_Register.html
+++ b/Personal_Site/Train_Website/templates/Train_Website/Train_Register.html
@@ -68,7 +68,7 @@ p3{
 </head>
 
 <head>
-	<title>Train_Start</title>
+	<title>Train Register</title>
 	<!--<link href="{% static '/css/main.css'  %}" rel="stylesheet" type="text/css">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
