added missing links to home

--- a/Personal_Site/Train_Website/templates/Train_Website/Train_Home.html
+++ b/Personal_Site/Train_Website/templates/Train_Website/Train_Home.html
@@ -122,6 +122,6 @@ p3{
         </div>
     </div>
 </div>
-    <p id="info">Phone Number: (917) 618-8958 • Email: sxw207@nyu.edu • <a href="www.linkedin.com/in/shixinkevinwu">Linkedin Profile</a> • <a href="https://my.indeed.com/p/shixinw-aqtitv7"> Indeed Profile</a> </p>
+<p id="info" style='text-align: center;color:#3b0420;font-weight: bold;'>Phone Number: (917) 618-8958 • Email: sxw207@nyu.edu • <a href="http://www.linkedin.com/in/shixinkevinwu" style='color:blue' target="_blank">Linkedin Profile</a> • <a href="https://my.indeed.com/p/shixinw-aqtitv7" style='color:blue' target="_blank"> Indeed Profile</a> • <a href="https://forms.gle/tH1PJQ31EeRm1BRU6" target="_blank" style='color:blue'> Contact Me</a> </p>
 </body>
 </html>
