--- a/Personal_Site/Train_Website/templates/Train_Website/landing.html
+++ b/Personal_Site/Train_Website/templates/Train_Website/landing.html
@@ -133,7 +133,7 @@ p3{
     </div>
 </div>
     <br>
-    <p id="info" ><b>Phone Number: (917) 618-8958 • Email: sxw207@nyu.edu • <a href="https://www.linkedin.com/in/shixinkevinwu" target="_blank">Linkedin Profile</a> • <a href="https://my.indeed.com/p/shixinw-aqtitv7" target="_blank"> Indeed Profile</b></b></a> </p>
+            <p id="info" style='text-align: center;color:#3b0420;font-weight: bold;'>Phone Number: (917) 618-8958 • Email: sxw207@nyu.edu • <a href="http://www.linkedin.com/in/shixinkevinwu" style='color:blue' target="_blank">Linkedin Profile</a> • <a href="https://my.indeed.com/p/shixinw-aqtitv7" style='color:blue' target="_blank"> Indeed Profile</a> • <a href="https://forms.gle/tH1PJQ31EeRm1BRU6" target="_blank" style='color:blue'> Contact Me</a> • <a href="{% url 'homepage' %}" style='color:blue'> Home </a> </p>
 </div>
 </body>
 </html>
